@@ -1248,7 +1248,9 @@ int     new_ilc;                        /* New ilc to set            */
     ARCH_DEP(store_psw) ( regs, psa->svcold );
 
     /* Load new PSW from PSA+X'60' */
+    obtain_lock(&sysblk.intlock);
     rc = ARCH_DEP(load_psw) ( regs, psa->svcnew );
+    release_lock(&sysblk.intlock);
     if ( rc )
         ARCH_DEP(program_interrupt) (regs, rc);
 
